FantasyWorldEngine, HeapPollutionExample